# BigOS

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  addrs.dtb  mkdocs.yml  riscv64-cmake-toolchain.cmake
.github/workflows/: build.yml  check-whitespace.yml  deploy.yml  format-check.yml  makefile.yml
CMake/: ClangTidy.cmake  CommonConfig.cmake  Linters.cmake  iwyu.imp  preset-mixins.json  riscv64-cmake-toolchain.cmake
CMake/toolchains/: riscv64-clang.cmake  riscv64-common.cmake  riscv64-gcc.cmake
Make/: common.mk  common_lib.mk  toolchain.mk
Markdown/: acronyms.md  add_acronym.py  contributing_rules.md
docs/: Doxyfile  about.md  add_acronym.py  build_system.md  contributing_rules.md
docs/build_system/: index.md  targets.md
docs/doxygen/: groups.dox
docs/js/: riscvasm.js
docs/source/: conf.py  index.rst
docs/source/pages/: license.rst
docs/source/pages/about/: index.rst  roadmap.rst  vision.rst
docs/source/pages/api/: index.rst  trap.rst
docs/source/pages/api/kernel/: index.rst
docs/source/pages/api/kernel/mm/: index.rst  palloc.rst  pmm.rst
docs/source/pages/api/libs/: dt.rst  index.rst  trap.rst
docs/source/pages/api/libs/stdbigos/: bitutils.rst  csr.rst  index.rst  sbi.rst  string.rst  trap.rst  types.rst
docs/source/pages/bigos/: index.rst
docs/source/pages/bigos/general/: abbreviations.rst  build_system.rst  index.rst  versioning.rst
docs/source/pages/developers/: begginers_guide.rst  docs_guide.rst  index.rst  rules.rst
docs/source/pages/developers/env/: arch_linux.rst  index.rst  macos.rst
docs/source/pages/wiki/: bootloader.rst  device_tree.rst  index.rst  kernel.rst  operating_system.rst
include/arch/riscv/: cpuinfo.h
include/debug/: debug_stdio.h
include/drivers/: console.h  uart.h
include/drivers/dt/: dt.h  dt_alloc.h  dt_node.h  dt_parser.h  dt_props.h
include/dt/: dt.h
include/hal/: hal.h  irq.h  memory_regions.h  trap.h
include/hal/arch/riscv/: trap.h
include/relocations/: reloc.h
include/stdbigos/: address.h  array_sizes.h  bitutils.h  buffer.h  csr.h  csr_vals.h  debug_stdio.h  error.h  math.h  memory_types.h  sbi.h  stdio.h  string.h  trap.h  types.h
include/trap/: trap.h
scripts/: add_abbr.sh  build_docs.sh  check-whitespaces.sh  fix-include-what-you-use.sh  format.sh
scripts/internal/: add_abbr.py
src/: CMakeLists.txt  Makefile
src/bootloader/: CMakeLists.txt  common.h  config.c  config.h  elf.c  elf.h  elf_defines.h  error.h  exit.c  exit.h  ext2.c  ext2.h  fdt.c  fdt.h  io.c  io.h  kernel.c  kernel.h  loader.c  loader.h  log.c  log.h  main.c  partition.c  partition.h  test.c
src/bootloader/data/: config_create.py  kboot  pre.conf  test.sh
src/bootloader/elf/: elf.c  elf.h  elf_defines.h  pt_dynamic.c  pt_dynamic.h  pt_load.c  pt_load.h
src/drivers/: CMakeLists.txt  console.c  uart.c
src/drivers/dt/: CMakeLists.txt  dt_access.c  dt_alloc.c  dt_alloc.h  dt_cleanup.c  dt_common.c  dt_common.h  dt_defines.h  dt_init.c  dt_node.h  dt_parser.c  dt_parser.h  dt_utils.c
src/example/: CMakeLists.txt  Makefile  entry.c  entry.s  linker.ld
src/example_dtree/: CMakeLists.txt  entry.c  linker.ld  startup.c  startup_enter.S
src/example_machine/: CMakeLists.txt  entry.c  linker.ld  start.S
src/example_sbi/: CMakeLists.txt  entry.c  linker.ld  startup.c
src/example_trap/: CMakeLists.txt  entry.c
src/example_umode_concurrency/: CMakeLists.txt  entry.c
src/hal/trap/: trap.c
src/kernel/: CMakeLists.txt
src/kernel/dt/: CMakeLists.txt  dt.h  dt_access.c  dt_common.c  dt_common.h  dt_utils.c
src/kernel/interrupt/: trap.S  trap.c  trap.h  trap_handler.c
src/kernel/logging/: klog.c  klog.h
src/kernel/memory_management/: common_types.c
src/kernel/memory_management/include/: common_types.h
src/kernel/memory_management/include/physical_memory/: manager.h
src/kernel/memory_management/physical_memory/: allocator.c  allocator.h  manager.c  manager.c.bk
src/kernel/memory_managment/: common_mem_types.c  common_mem_types.h
src/kernel/memory_managment/include/physical_memory/: manager.h
src/kernel/memory_managment/physical_memory/: allocator.c  allocator.h  manager.c
src/lib/: Makefile
src/lib/arch/riscv/cpuinfo/: CMakeLists.txt  cpuinfo.c
src/lib/debug/: CMakeLists.txt  Makefile  debug_stdio.c  debug_stdio.h
src/lib/debug/include/: debug_stdio.h
src/lib/dt/: CMakeLists.txt  dt_access.c  dt_common.c  dt_common.h  dt_defines.h  dt_utils.c
src/lib/hal/: CMakeLists.txt  hal.c  hal_internal.h
src/lib/hal/arch/riscv/: csr.h  csr_vals.h  irq.c  memory_region.c  trap.S  trap.c  trap.h
src/lib/hal/arch/riscv/trap/: trap.S  trap.c
src/lib/relocations/: CMakeLists.txt  reloc.c
src/lib/startup/: CMakeLists.txt  linker.ld  start.S  startup.c
src/lib/stdbigos/: CMakeLists.txt  Makefile  bitutils.c  buffer.c  csr.h  sbi.c  sbi.h  stdio.c  stdio.h  string.c  string.h  types.h
src/lib/trap/: CMakeLists.txt  trap.S  trap.c
src/slib/: Makefile
src/slib/debug/: Makefile  debug_stdio.c
